| Summary: | ASTERISK-28255: res_rtp_asterisk: REMB RTCP packet sending may be incorrect | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | webrtc |
| Date Opened: | 2019-01-22 10:11:17.000-0600 | Date Closed: | 2019-04-04 08:54:35 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.1.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Looking at chrome://webrtc-internals and added logging in Asterisk it seems that our REMB report that is being sent may not be correct in all circumstances, it may be that as bandwidth increases it doesn't work as expected and the browser sees that there is little bandwidth. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2019-04-04 08:54:35.818-0500 Change 11194 merged by Joshua Colp: bridge_softmix: use a float type to store the internal REMB bitrate [https://gerrit.asterisk.org/c/asterisk/+/11194|https://gerrit.asterisk.org/c/asterisk/+/11194] By: Friendly Automation (friendly-automation) 2019-04-04 08:59:00.079-0500 Change 11193 merged by Joshua Colp: bridge_softmix: use a float type to store the internal REMB bitrate [https://gerrit.asterisk.org/c/asterisk/+/11193|https://gerrit.asterisk.org/c/asterisk/+/11193] | ||